--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,58 +1,15 @@
-# =============================================
-# AI LEGAL ADVISOR - ENVIRONMENT CONFIGURATION
-# =============================================
-# Copy this file to .env and fill in your values
-# NEVER commit .env to version control!
+# OpenRouter Settings
+OPENROUTER_API_KEY=your_openrouter_key_here
+OPENROUTER_BASE_URL=https://openrouter.ai/api/v1
 
-# ---------------------------------------------
-# APPLICATION
-# ---------------------------------------------
-APP_NAME="AI Legal Advisor"
-APP_VERSION="1.0.0"
-ENVIRONMENT="development"  # development, staging, production
-DEBUG=true
+# Model Designations (Free Models)
+MODEL_DEFAULT=google/gemini-2.0-flash-exp:free
+MODEL_CHAT=google/gemini-2.0-flash-exp:free
+MODEL_ANALYSIS=meta-llama/llama-3.3-70b-instruct:free
+MODEL_GENERATION=meta-llama/llama-3.3-70b-instruct:free
 
-# ---------------------------------------------
-# DATABASE (PostgreSQL)
-# ---------------------------------------------
-DATABASE_URL="postgresql+asyncpg://user:password@localhost:5432/injustice_db"
-
-# ---------------------------------------------
-# AUTHENTICATION & SECURITY
-# ---------------------------------------------
-# Generate with: openssl rand -hex 32
-SECRET_KEY="your-super-secret-key-change-in-production"
-ALGORITHM="HS256"
-ACCESS_TOKEN_EXPIRE_MINUTES=30
-REFRESH_TOKEN_EXPIRE_DAYS=7
-
-# ---------------------------------------------
-# AI & RAG CONFIGURATION
-# ---------------------------------------------
-GOOGLE_API_KEY="your-google-api-key"
-OPENAI_MODEL="gemini-1.5-flash"
-EMBEDDING_MODEL="models/embedding-001"
-
-# Vector Database (ChromaDB local path)
-CHROMA_PERSIST_DIR="./data/chroma_db"
-
-# RAG Settings
-RAG_TOP_K=5
-RAG_CHUNK_SIZE=500
-RAG_CHUNK_OVERLAP=75
-
-# ---------------------------------------------
-# RATE LIMITING
-# ---------------------------------------------
-RATE_LIMIT_PER_MINUTE=30
-
-# ---------------------------------------------
-# CORS (Comma-separated origins)
-# ---------------------------------------------
-ALLOWED_ORIGINS="http://localhost:3000,http://localhost:8081"
-
-# ---------------------------------------------
-# LEGAL SAFETY
-# ---------------------------------------------
-JURISDICTION="Nigeria"
-ESCALATION_EMAIL="legal-aid@example.com"
+# Existing Settings
+GOOGLE_API_KEY=
+EMBEDDING_MODEL=sentence-transformers/all-MiniLM-L6-v2
+DATABASE_URL=sqlite+aiosqlite:///./data/injustice.db
+SECRET_KEY=generate_a_random_string_here
