--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -30,8 +30,11 @@ tiktoken==0.5.2
 sentence-transformers==2.3.1
 
 # Document Processing
-pypdf==4.0.1
-pdfplumber==0.10.3
+pypdf>=4.0.0
+pdfplumber>=0.10.0
+python-docx>=1.1.0
+pdf2image>=1.17.0
+pillow>=10.0.0
 
 # Security & Utilities
 python-dotenv==1.0.1
