--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,7 +1,7 @@
 # FastAPI & Server
-fastapi==0.109.2
+fastapi==0.128.0
 uvicorn[standard]==0.27.1
-python-multipart==0.0.9
+python-multipart==0.0.22
 
 # Database
 sqlalchemy==2.0.25
@@ -10,24 +10,25 @@ aiosqlite==0.19.0
 alembic==1.13.1
 
 # Authentication & Security
-python-jose[cryptography]==3.3.0
+PyJWT[crypto]==2.8.0
 passlib[argon2]==1.7.4
 argon2-cffi==23.1.0
 bcrypt==4.1.2
 
 # Validation & Settings
-pydantic==2.6.1
-pydantic-settings==2.1.0
+pydantic==2.7.4
+pydantic-settings==2.12.0
 email-validator==2.1.0.post1
 
 # RAG & AI
-openai==1.12.0
-langchain==0.1.6
-langchain-openai==0.0.5
-langchain-community==0.0.19
-chromadb==0.4.22
-tiktoken==0.5.2
-sentence-transformers==2.3.1
+openai==2.16.0
+langchain==1.2.7
+langchain-core==1.2.7
+langchain-openai==1.1.7
+langchain-text-splitters==1.1.0
+langchain-chroma==1.1.0
+chromadb==1.4.1
+tiktoken==0.12.0
 
 # Document Processing
 pypdf>=4.0.0
@@ -38,7 +39,7 @@ pillow>=10.0.0
 
 # Security & Utilities
 python-dotenv==1.0.1
-httpx==0.26.0
+httpx==0.28.1
 tenacity==8.2.3
 
 # Rate Limiting
@@ -46,5 +47,4 @@ slowapi==0.1.9
 
 # Testing
 pytest==8.0.0
-pytest-asyncio==0.23.4
-httpx==0.26.0
+pytest-asyncio==0.23.8
