--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -2,6 +2,8 @@
 fastapi==0.128.0
 uvicorn[standard]==0.27.1
 python-multipart==0.0.22
+fastembed>=0.2.0
+langchain-community>=0.0.10
 
 # Database
 sqlalchemy==2.0.25
