--- a/backend/railway.toml
+++ b/backend/railway.toml
@@ -2,7 +2,7 @@
 builder = "NIXPACKS"
 
 [deploy]
-startCommand = "gunicorn -w 1 -k uvicorn.workers.UvicornWorker app.main:app --bind 0.0.0.0:$PORT --timeout 300 --graceful-timeout 300"
+startCommand = "gunicorn -w 1 -k uvicorn.workers.UvicornWorker app.main:app --bind 0.0.0.0:{{PORT}} --timeout 300 --graceful-timeout 300"
 restartPolicyType = "ON_FAILURE"
 restartPolicyMaxRetries = 10
 
